changes: - fix swagger generation in docker file - add user generator endpoint
